Load config from remote + eureka client

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,20 @@
-server.port=9080
-spring.datasource.url=jdbc:postgresql://localhost:5432/account_service
-spring.datasource.username=postgres
-spring.datasource.password=admin
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-# Uncomment and configure the Swagger UI path
-springdoc.swagger-ui.path=/swagger-ui.html
-# Make Swagger UI available at the root path
-springdoc.swagger-ui.disable-swagger-default-url=true
-#logging.level.root=debug
-# Circuit Breaker Configuration
-spring.cloud.openfeign.circuitbreaker.enabled=true
-spring.cloud.openfeign.client.config.default.connect-timeout=5000
-spring.cloud.openfeign.client.config.default.read-timeout=5000
-resilience4j.timelimiter.configs.default.timeout-duration=5s
+spring.application.name=account-service
+#server.port=9080
+#spring.datasource.url=jdbc:postgresql://localhost:5432/account_service
+#spring.datasource.username=postgres
+#spring.datasource.password=admin
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+## Uncomment and configure the Swagger UI path
+#springdoc.swagger-ui.path=/swagger-ui.html
+## Make Swagger UI available at the root path
+#springdoc.swagger-ui.disable-swagger-default-url=true
+##logging.level.root=debug
+## Circuit Breaker Configuration
+#spring.cloud.openfeign.circuitbreaker.enabled=true
+#spring.cloud.openfeign.client.config.default.connect-timeout=5000
+#spring.cloud.openfeign.client.config.default.read-timeout=5000
+#resilience4j.timelimiter.configs.default.timeout-duration=
+spring.config.import=configserver:http://localhost:8888
+spring.cloud.config.fail-fast=true
