--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.application.name=account-service
 spring.config.import=configserver:http://${HOST_IP_ADDRESS:localhost}:8888
 spring.cloud.config.fail-fast=true
+
+# Retry configuration for config service connection
+spring.cloud.config.retry.initial-interval=1000
+spring.cloud.config.retry.multiplier=1.5
+spring.cloud.config.retry.max-attempts=10000
+spring.cloud.config.retry.max-interval=2000
